--- a/vue008.css
+++ b/vue008.css
@@ -1,5 +1,35 @@
 @charset "UTF-8";
 * {
   font-family: 微軟正黑體;
+  vertical-align: top;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
+.pianokey {
+  display: inline-block;
+  position: relative;
+}
+
+.white {
+  width: 44px;
+  height: 330px;
+  border: solid 1px black;
+}
+
+.black {
+  position: absolute;
+  top: 0px;
+  width: 22px;
+  height: 181.5px;
+  background-color: #585858;
+  margin-left: -11px;
+  margin-right: -11px;
+  z-index: 20;
 }
 /*# sourceMappingURL=vue008.css.map */
