--- a/vue008.sass
+++ b/vue008.sass
@@ -10,17 +10,83 @@ $color_black: #585858
 *
     font-family: 微軟正黑體
     vertical-align: top
+
 html,body 
     @include size(100%,100%)
     margin: 0px
     padding: 0px
-        
+
+h2
+    margin-bottom: 30px
+    color: $color_black
+
+button
+    background-color: transparent
+    border: none
+    border: solid 1px
+    padding: 4px  12px
+    border-radius: 4px
+    transition: 0.5s
+    cursor: pointer
+    vertical-align: middle
+    &:hover
+        background-color: $color_black
+        color: white
+
+.notes_list
+    li
+        display: inline-block
+        border-right: solid 1px
+        padding: 2px 5px
+        cursor: pointer
+        transition: 0.3s
+        &:hover
+            background-color: darken($color_white,5)
+        &.playing
+            background-color: darken($color_white,10)
+        .time
+            font-size: 8px
+            opacity: 0.3
+        .num
+            font-size: 16px
+
+
+.center_box
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+    width: 100%
+    text-align: center
+
+.keyboard
+    box-shadow: 0px 0px 40px -5px rgba(0,0,0,0.4)
+    display: inline-block
+    margin-bottom: 30px
+
 .pianokey
     display: inline-block
     position: relative
+    cursor: pointer
+    
+
+.white.playing
+    background-color: darken($color_white,10)
+    transform: translate(0px,0px)
+
+.black.playing
+    background-color: lighten($color_black,10)
+    transform: translate(0px,0px)
+    
 .white
     @include size($key_width,$key_height)
-    border: solid 1px black
+    border: solid 1px $color_white
+    transform: translate(-3px,-3px)
+    transition: 0.1s
+    &:hover
+        transform: translate(0px,0px)
+        background-color: $color_white
+
 .black
     position: absolute
     top: 0px
@@ -30,3 +96,24 @@ html,body
     margin-left: -$key_width/4
     margin-right: -$key_width/4
     z-index: 20
+    transform: translate(-3px,-3px)
+    transition: 0.1s
+    &:hover
+        transform: translate(0px,0px)
+        background-color: darken($color_black,10)
+
+.label
+    position: absolute
+    color: rgba($color_black,0.5)
+    bottom: -25px
+    left: 50%
+    transform: translate(-50%)
+    font-size: 8px
+
+i
+    margin-left: 5px
+    margin-right: 0px
+    margin-top: 3px
+i.fa-circle
+    color: darken(red,10)
+    
